# Raytracing

./: .gitignore  CMakeLists.txt  README.md  RayTracer.sln  RayTracer.vcxproj  RayTracer.vcxproj.filters
src/: app.cpp  app.h  camera.cpp  camera.h  definitions.h  main.cpp  utils.h
src/core/: color.h  hittable.h  primitives.h  ray.h  vec3.h
src/ray_tracer/: camera.h  interval.h  material.h  object.h  scene.h  vec3.h
